--- a/styles/hero.css
+++ b/styles/hero.css
@@ -3,10 +3,18 @@
     padding: 20px 40px;
 }
 
+.hero-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1rem;
+}
+
 .hero-image {
-    border-radius: 170.859px;
     text-align: center;
-    margin-bottom: 1rem;
+}
+
+.image {
+    /* width: 50%; */
 }
 
 .hero-text {
@@ -52,17 +60,22 @@
 }
 
 .hero-container {
+    grid-template-columns: repeat(2, 1fr);
     gap: 4rem;
 }
 
+.image {
+    width: 60%;
+}
+
 .hero-image {
-    position: absolute;
-    right: 0;
+    order: 2;
 }
 
 .hero-text {
+    order: 1;
     text-align: left;
-    margin-top: 4rem;
+    margin-top: 1rem;
 }
 
 .title {
