--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,6 +1,5 @@
 nav {
     width: 100%;
-    /* background-color: limegreen; */
 }
 
 /* To hide for large screens */
@@ -13,26 +12,12 @@ nav {
     position: absolute;
     top: 30px;
     right: 30px;
-    color: #ffffff
+    color: var(--button-text);
 }
 
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); 
-    display: none; 
-    justify-content: center;
-    align-items: center;
-    z-index: 9999; 
-}
-
-.mobile-menu {
+.navbar ul {
     text-align: center;
     padding: 20px;
-    border-radius: 5px;
 }
 
 ul li {
@@ -40,9 +25,9 @@ ul li {
     margin-top: 2rem;
 }
 
-a {
+.navbar a {
     text-decoration: none;
-    color: #fff;
+    color: var(--button-text);
     font-size: 1.5rem;
     font-family: "Heebo", sans-serif;
 }
@@ -51,14 +36,51 @@ a {
 @media (max-width: 767px) {
     .menu-button {
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         cursor: pointer;
     }
 
-    .menu-button .icon {
-        display: inline-block;
-        vertical-align: middle;
-        margin-right: 8px;
+    #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--overlay-background); 
+        display: none; 
+        justify-content: center;
+        align-items: center;
+        z-index: 9999; 
+    }
+}
+
+@media (min-width: 768px) {
+    .navbar {
+        padding: 0 40px;
+    }
+
+    .menu-button {
+        /* display: none; */
+    }
+
+    #overlay {
+        /* display: none; */
+    }
+
+    .navbar ul {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .navbar li:not(:last-child) {
+        margin-right: 3.75rem;
+    }
+
+    .navbar a {
+        color: var(--link-color);
+        text-align: right;
+        font-family: "Heebo", sans-serif;
     }
 }
 
@@ -78,36 +100,4 @@ a {
          /* Slide the overlay to the left */
         transform: translateX(0);
     }
-}
-
-.menu-items {
-    display: none;
-}
-
-
-@media (min-width: 768px) {
-    .navbar {
-        padding: 0 40px;
-    }
-
-    .menu-items {
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        list-style: none;
-    }
-
-    li > a {
-        text-decoration: none;
-        color: #000;
-        text-align: right;
-        font-family: "Heebo", sans-serif;
-        font-size: 20px;
-        font-weight: 500;
-    }
-
-    .menu-items li:not(:last-child) {
-        margin-right: 3.75rem;
-    }
-
 }
