--- a/styles/featured.css
+++ b/styles/featured.css
@@ -1,98 +1,104 @@
 .featured_container {
-   padding: 2.5rem 1.5rem;
-}
-
-.featured-title {
-    color: var(--primary-color);
-    font-family: "Heebo", sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    text-align: center;
-    margin-bottom: 1.5rem;
-}
-
-.flex_wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.content_container {
-    padding: 1rem 0;
-}
-
-.image {
-    width: 100%;
-}
-
-.work-title {
-    color: var(--primary-color);
-    font-family: "Heebo", sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 1rem;
-}
-
-.year-name {
-    display: flex;
-    gap: 2.25rem;
-    margin-bottom: 1rem;
-}
-
-.year {
-    color: var(--button-text);
-    text-align: center;
-    font-family: "Heebo", sans-serif;
-    font-size: 16px;
-    font-weight: 900;
-    border-radius: 16px;
-    background-color: #142850;
-    padding: 2px 16px;
-}
-
-.name {
-    color: var(--Light);
-    font-family: "Heebo", sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-}
-
-.description {
-    color: var(--primary-color);
-    font-family: "Heebo", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    text-align: left;
-}
-
-/* Media Queries for Large Screens */
-@media (min-width: 992px) {
-    .featured_container {
-       padding: 2rem 5.438rem 7.5rem;
-    }
-
-    .featured-title {
-        font-size: 22px;
-        text-align: left;
-    }
-
-    .wrapper {
-       display: flex;
-       flex-direction: row;
-       margin-top: 2rem;
+    padding: 2.5rem 1.5rem;
+ }
+ 
+ .featured-title {
+     color: var(--primary-color);
+     font-family: "Heebo", sans-serif;
+     font-size: 18px;
+     font-weight: 400;
+     text-align: center;
+     margin-bottom: 1.5rem;
+ }
+ 
+ .flex_wrapper {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+ }
+ 
+ .content_container {
+     padding: 1rem 0;
+ }
+ 
+ .featured-image {
+    width: 339px;
+    border-radius: 6px;
+ }
+ 
+ .work-title {
+     color: var(--primary-color);
+     font-family: "Heebo", sans-serif;
+     font-size: 24px;
+     font-weight: 700;
+     margin-bottom: 1rem;
+ }
+ 
+ .year-name {
+     display: flex;
+     gap: 2.25rem;
+     margin-bottom: 1rem;
+ }
+ 
+ .year {
+     color: var(--button-text);
+     text-align: center;
+     font-family: "Heebo", sans-serif;
+     font-size: 16px;
+     font-weight: 900;
+     border-radius: 16px;
+     background-color: #142850;
+     padding: 2px 16px;
+ }
+ 
+ .name {
+     color: var(--Light);
+     font-family: "Heebo", sans-serif;
+     font-size: 16px;
+     font-style: normal;
+     font-weight: 400;
+ }
+ 
+ .featured-description {
+     color: var(--primary-color);
+     font-family: "Heebo", sans-serif;
+     font-size: 16px;
+     font-weight: 400;
+     text-align: left;
+ }
+ 
+ /* Media Queries for Large Screens */
+ @media (min-width: 992px) {
+     .featured_container {
+        padding: 2rem 5.438rem 7.5rem;
      }
-
-     .work-title {
-        font-size: 30px;
+ 
+     .featured-title {
+         font-size: 22px;
+         text-align: left;
      }
+ 
+     .wrapper {
+        display: flex;
+        flex-direction: row;
+        margin-top: 2rem;
+      }
+ 
+      .work-title {
+         font-size: 30px;
+      }
 
-     .name {
-        font-size: 20px;
-     }
-
-     .content_container {
-        padding: 0 2rem;
-     }
-}
+      .featured-image {
+          width: 246px;
+          border-radius: 6px;
+      }
+ 
+      .name {
+         font-size: 20px;
+      }
+ 
+      .content_container {
+         padding: 0 2rem;
+      }
+ }
