--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,19 +1,23 @@
 .footer-container {
     background-color: #FFF;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5rem;
     padding: 3rem 4.5rem;
 }
 
-.icon {
+.socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 1.625rem;
+}
+
+li {
+    list-style: none;
     cursor: pointer;
 }
 
-.icon:not(:last-child) {
-    margin-right: 1rem;
+a {
+    text-decoration: none;
 }
 
 .copyright {
