--- a/styles/posts.css
+++ b/styles/posts.css
@@ -3,25 +3,17 @@
     padding: 2.375rem 0.688rem;
 }
 
-.title-container {
-   display: flex;
-   justify-content: space-between;
-   margin-bottom: 1rem;
-}
-
 h2 {
     color: var(--primary-color);
     font-family: "Heebo", sans-serif;
     font-size: 18px;
     font-weight: 400;
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 h6 {
-    color: var(--View-Color );
-    text-align: right;
-    font-family: "Heebo", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
+    display: none;
 }
 
 .flex-container {
@@ -43,6 +35,7 @@ h6 {
     font-size: 22px;
     font-weight: 700;
     margin-bottom: 1rem;
+    text-align: left;
 }
 
 .date-topic {
@@ -73,8 +66,23 @@ h6 {
         padding: 2.5rem 7.5rem;
     }
 
+    .title-container {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+     }
+
     h2 {
       font-size: 22px;
+    }
+
+    h6 {
+        display: block;
+        color: var(--View-Color );
+        text-align: right;
+        font-family: "Heebo", sans-serif;
+        font-size: 16px;
+        font-weight: 400;
     }
 
     .post-title {
