--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,103 +1,121 @@
 nav {
-    width: 100%;
+  width: 100%;
+}
+
+.logo {
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Heebo", sans-serif;
+}
+
+.logo a {
+  text-decoration: none;
+  color: var(--link-color);
+  cursor: pointer;
 }
 
 /* To hide for large screens */
 .menu-button {
-    display: none; 
-    padding: 20px;
+  display: none;
 }
 
 .close_icon {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    color: var(--button-text);
-}
-
-.navbar ul {
-    text-align: center;
-    padding: 20px;
-}
-
-ul li {
-    list-style: none;
-    margin-top: 2rem;
-}
-
-.navbar a {
-    text-decoration: none;
-    color: var(--button-text);
-    font-size: 1.5rem;
-    font-family: "Heebo", sans-serif;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  color: var(--button-text);
+  cursor: pointer;
 }
 
 /* Media Queries to show menu button on small screens */
 @media (max-width: 767px) {
-    .menu-button {
-        display: flex;
-        justify-content: flex-end;
-        cursor: pointer;
-    }
+  .menu-button {
+    display: block;
+    cursor: pointer;
+  }
 
-    #overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: var(--overlay-background); 
-        display: none; 
-        justify-content: center;
-        align-items: center;
-        z-index: 9999; 
-    }
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 30px;
+  }
+
+  ul li {
+    text-align: center;
+    list-style: none;
+    margin-top: 2rem;
+    font-weight: 500;
+  }
+
+  li a {
+    text-decoration: none;
+    color: var(--button-text);
+    font-size: 24px;
+    font-family: "Heebo", sans-serif;
+  }
+
+  #overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--overlay-background);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
 }
 
 @media (min-width: 768px) {
-    .navbar {
-        padding: 0 40px;
-    }
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 60px;
+  }
 
-    .menu-button {
-        /* display: none; */
-    }
+  .navbar ul {
+    display: flex;
+    align-items: center;
+  }
 
-    #overlay {
-        /* display: none; */
-    }
+  .navbar li:not(:last-child) {
+    margin-right: 3.75rem;
+  }
 
-    .navbar ul {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-    }
+  li a {
+    color: var(--link-color);
+    font-size: 24px;
+    font-weight: 500;
+    text-align: right;
+    font-family: "Heebo", sans-serif;
+    cursor: pointer;
+  }
+}
 
-    .navbar li:not(:last-child) {
-        margin-right: 3.75rem;
-    }
-
-    .navbar a {
-        color: var(--link-color);
-        text-align: right;
-        font-family: "Heebo", sans-serif;
-    }
+@media (min-width: 1200px) {
+  .navbar {
+    padding: 40px 120px;
+  }
 }
 
 .slide-from-right {
-    animation-name: slideFromRight;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
+  animation-name: slideFromRight;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
 }
 
 @keyframes slideFromRight {
-    from {
-        /* Start the animation from the right edge */
-        transform: translateX(100%);
-    }
+  from {
+    /* Start the animation from the right edge */
+    transform: translateX(100%);
+  }
 
-    to {
-         /* Slide the overlay to the left */
-        transform: translateX(0);
-    }
+  to {
+    /* Slide the overlay to the left */
+    transform: translateX(0);
+  }
 }
