added color to logo

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -10,7 +10,7 @@ nav {
 
 .logo a {
   text-decoration: none;
-  color: var(--link-color);
+  color: var(--button-background);
   cursor: pointer;
 }
 
