--- a/styles/featured.css
+++ b/styles/featured.css
@@ -1,5 +1,5 @@
 .featured_container {
-  padding: 2.5rem 1.5rem;
+  padding: 2.5rem 1.5rem 0;
 }
 
 .featured-title {
@@ -9,6 +9,10 @@
   font-weight: 400;
   text-align: center;
   margin-bottom: 1.5rem;
+}
+
+.wrapper {
+  margin-bottom: 2rem;
 }
 
 .flex_wrapper {
@@ -23,7 +27,7 @@
 }
 
 .featured-image {
-  width: 339px;
+  width: 100%;
   border-radius: 6px;
 }
 
@@ -37,8 +41,9 @@
 
 .project-container {
   display: flex;
-  align-items: center;
-  gap: 2.25rem;
+  flex-direction: column;
+  align-items: start;
+  gap: 24px;
   margin-bottom: 1rem;
 }
 
@@ -51,15 +56,13 @@
   font-weight: 900;
   border-radius: 16px;
   background-color: #142850;
-  padding: 10px 16px;
+  padding: 5px 16px;
+  cursor: pointer;
 }
 
-.name {
-  color: var(--Light);
-  font-family: "Heebo", sans-serif;
+.stack {
+  color: var(--secondary-color);
   font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
 }
 
 .featured-description {
@@ -71,7 +74,7 @@
 }
 
 /* Media Queries for Large Screens */
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .featured_container {
     padding: 2rem 5.438rem 7.5rem;
   }
@@ -87,17 +90,9 @@
     margin-top: 2rem;
   }
 
-  .work-title {
-    font-size: 30px;
-  }
-
   .featured-image {
-    width: 246px;
+    width: 400px;
     border-radius: 6px;
-  }
-
-  .name {
-    font-size: 20px;
   }
 
   .content_container {
