--- a/styles/index.css
+++ b/styles/index.css
@@ -2,15 +2,16 @@
 
 :root {
   --primary-color: #21243d;
+  --secondary-color: #ff6464;
   --link-color: #000;
   --button-background: #ff6464;
   --button-border: #ff6464;
   --button-text: #fff;
+  --primary-text-color: #fff;
   --overlay-background: rgba(0, 0, 0, 0.8);
   --Post-Background: #edf7fa;
   --View-Color: #00a8cc;
   --Copyright-Color: #21243d;
-  --Light: #ff646479;
 }
 
 * {
